--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+#main {
+    background-color: whitesmoke;
+}
+
+
 #image {
     display: block;
       
@@ -22,6 +27,11 @@
 
 #title {
     text-align: center;
-    font-family:Georgia, 'Times New Roman', Times, serif.;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
+    font-size: 40px;
+    color: black;
+    
+
     
 }
