--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 #title {
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: bold;
+    font-weight: bolder;
     font-size: 40px;
     color: black;
     
