--- a/style.css
+++ b/style.css
@@ -5,12 +5,10 @@
 
 #image {
     display: block;
-      
     max-width: 100%;
-    
     margin-left: auto;
-    
     margin-right: auto;
+    border-radius: 50px;
     
 }
 
