--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@
 
 #tribute-info {
     text-align: center;
-    background-color: whitesmoke;
+    color: #36393A;
+    
 }
 
 
@@ -24,6 +25,7 @@
     text-align: center;
     font-size: 28px;
     font-style:inherit;
+    color: #36393A
 }
 
 #title {
@@ -31,8 +33,12 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bolder;
     font-size: 45px;
-    color: black;
-    
+    color: #36393A;
+    padding: ;
+    }
 
-    
-}
+hr {
+    height: 12px;
+    border: 0;
+    box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
+    }
