--- a/style.css
+++ b/style.css
@@ -1,44 +1,3 @@
-#main {
-    background-color: whitesmoke;
-}
-
-
-#image {
-    display: block;
-    max-width: 20%;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 508px;
-    border: 5px solid gold;
-    
+body {
     
 }
-
-#tribute-info {
-    text-align: center;
-    color: #36393A;
-    
-}
-
-
-#img-caption {
-    text-align: center;
-    font-size: 28px;
-    font-style:inherit;
-    color: #36393A
-}
-
-#title {
-    text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: bolder;
-    font-size: 45px;
-    color: #36393A;
-    padding: ;
-    }
-
-hr {
-    height: 12px;
-    border: 0;
-    box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
-    }
