--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+*{
+    box-sizing: border-box;
+}
+
 body {
-    
+    font-family: 'Roboto Mono', monospace;
+}
+
+.header h1, h3 {
+    text-align: center;
+}
+
+.header img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
 }
