--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 body {
     font-family: 'Roboto Mono', monospace;
+    padding: 20px 20px;
 }
 
 .header h1, h3 {
@@ -14,5 +15,6 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 80%;
+    width: 70%;
+    opacity: 0.8;
 }
